Fix link to documentation

--- a/src/Augurk/wwwroot/templates/configuration.html
+++ b/src/Augurk/wwwroot/templates/configuration.html
@@ -116,7 +116,7 @@
         <div class="panel-heading">Integration</div>
         <div class="panel-body">
             <div style="margin-top: -12px; margin-bottom: 12px;">
-                <p><em>Augurk exposes several APIs to enable integration in your own tools: <a href="/doc/ui/index?urls.primaryName=doc%2Fapi%2FV2">Go to documentation.</a></em></p>
+                <p><em>Augurk exposes several APIs to enable integration in your own tools: <a href="/doc/ui/index.html?urls.primaryName=V2">Go to documentation.</a></em></p>
                 <p>Of course, the easiest way to interact with the Augurk APIs is through the commandline tool which is available on NuGet: <a href="https://www.nuget.org/packages/Augurk.CommandLine/">https://www.nuget.org/packages/Augurk.CommandLine/</a>.</p>
                 <p>Users of <strong>Microsoft &reg; Visual Studio Team Services</strong> or <strong>Microsoft &reg; Team Foundation Server</strong> can also use the Augurk build integration: <a href="https://marketplace.visualstudio.com/items?itemName=augurk.augurk">https://marketplace.visualstudio.com/items?itemName=augurk.augurk</a>.</p>
             </div>
